; ModuleID = '/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-annot.c_pdf_annot_ink_list_stroke_count.c'
source_filename = "/home/carl/AnghaBench/sumatrapdf/mupdf/source/pdf/extr_pdf-annot.c_pdf_annot_ink_list_stroke_count.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_4__ = type { i32 }

@InkList = common dso_local global i32 0, align 4
@ink_list_subtypes = common dso_local global i32 0, align 4

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @pdf_annot_ink_list_stroke_count(i32* %0, %struct.TYPE_4__* %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca %struct.TYPE_4__*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  store i32* %0, i32** %4, align 8
  store %struct.TYPE_4__* %1, %struct.TYPE_4__** %5, align 8
  store i32 %2, i32* %6, align 4
  %9 = load i32*, i32** %4, align 8
  %10 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %11 = load i32, i32* @InkList, align 4
  %12 = call i32 @PDF_NAME(i32 %11)
  %13 = load i32, i32* @ink_list_subtypes, align 4
  %14 = call i32 @check_allowed_subtypes(i32* %9, %struct.TYPE_4__* %10, i32 %12, i32 %13)
  %15 = load i32*, i32** %4, align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %5, align 8
  %17 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %16, i32 0, i32 0
  %18 = load i32, i32* %17, align 4
  %19 = load i32, i32* @InkList, align 4
  %20 = call i32 @PDF_NAME(i32 %19)
  %21 = call i32* @pdf_dict_get(i32* %15, i32 %18, i32 %20)
  store i32* %21, i32** %7, align 8
  %22 = load i32*, i32** %4, align 8
  %23 = load i32*, i32** %7, align 8
  %24 = load i32, i32* %6, align 4
  %25 = call i32* @pdf_array_get(i32* %22, i32* %23, i32 %24)
  store i32* %25, i32** %8, align 8
  %26 = load i32*, i32** %4, align 8
  %27 = load i32*, i32** %8, align 8
  %28 = call i32 @pdf_array_len(i32* %26, i32* %27)
  %29 = sdiv i32 %28, 2
  ret i32 %29
}

declare dso_local i32 @check_allowed_subtypes(i32*, %struct.TYPE_4__*, i32, i32) #1

declare dso_local i32 @PDF_NAME(i32) #1

declare dso_local i32* @pdf_dict_get(i32*, i32, i32) #1

declare dso_local i32* @pdf_array_get(i32*, i32*, i32) #1

declare dso_local i32 @pdf_array_len(i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
